# jokes_rust

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  constant.PORTUGUESE_JOKES.html  crates.js  fn.get_jokes_by_language.html  help.html  index.html  search-index.js  settings.html  sidebar-items.js  src-files.js  struct.Joke.html
.github/workflows/: deploy-docs.yml
benches/: benchmark.rs
jokes_rust/: all.html  constant.ENGLISH_JOKES.html  fn.get_random_joke.html
resources/: jokes.md
search.desc/jokes_rust/: jokes_rust-desc-0-.js
src/: lib.rs  main.rs
src/jokes_rust/: lib.rs.html
tests/: jokes_test.rs
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
